--- a/src/main/resources/templates/sys/manage.html
+++ b/src/main/resources/templates/sys/manage.html
@@ -151,7 +151,7 @@
                                        class="btn btn-default btn-flat">修改密码</a>
                                 </div>
                                 <div class="pull-right">
-                                    <a href="javascript:;" \@click="logout" class="btn btn-default btn-flat">退出系统</a>
+                                    <a href="/clearCache" target="_blank" class="btn btn-default btn-flat">清除缓存</a>
                                 </div>
                             </li>
                         </ul>
