更新博客注意页面显示

--- a/src/main/resources/templates/blog/_footer.html
+++ b/src/main/resources/templates/blog/_footer.html
@@ -89,7 +89,7 @@
     }
 
     $(function () {
-        if (HK.isPc()) {
+        if (HK.isPc() && window.innerWidth > 1465) {
             $('.hid').toggleClass('hid');
         }
         $("#toTop").click(function () {
