--- a/src/main/resources/static/css/blog.css
+++ b/src/main/resources/static/css/blog.css
@@ -135,16 +135,16 @@ ul.list-group {
 
 .right-nav {
     /*background: #F8F8F8;*/
-    /*width: 13%;*/
-    width: 280px;
+    width: 15%;
+    /*width: 280px;*/
     padding-bottom: 12px;
-    padding-left: 14px;
-    padding-right: 10px;
+    padding-left: 8px;
+    padding-right: 6px;
     float: right;
     position: fixed;
     /*top: 18%;*/
     top: 148px;
-    right: 5%;
+    right: 4.5%;
     border: solid #eeeeee 2px;
     /*border: solid green 1px;*/
     border-radius: 4px;
@@ -176,7 +176,9 @@ ul.list-group {
 
 .right-nav a {
     display: inline-block;
-    width: 200px;
+    font-size: 13px;
+
+    /*width: 200px;*/
 }
 
 .right-nav p {
@@ -185,6 +187,7 @@ ul.list-group {
 
 .right-nav .p1 {
     white-space:nowrap;overflow:hidden;text-overflow:ellipsis;
+    float: unset;
 }
 
 .right-nav ul, ol {
