--- a/src/main/resources/templates/blog/index1.html
+++ b/src/main/resources/templates/blog/index1.html
@@ -1,5 +1,7 @@
 @include("/blog/_header.html"){}
-<div class="layui-main" style="padding: 15px 60px;margin-top: 26px;">
+<div class="layui-main" style="padding: 15px 60px;margin-top: 26px;width:62%;">
+    <center>本页共 ${user.pageTotal} 篇，分为 ${user.dirCount} 个系列展示</center>
+
     @if (isNotEmpty(lists) && isNotEmpty(titles)) {
     <ul>
     @for (list in lists) {
@@ -12,6 +14,10 @@
         @}
     @}
     </ul>
+    <div style="padding-top: 30px;clear: both">
+        <center>公开博客 ${user.pub} 篇，受保护博客 ${user.pro} 篇，All Right Reserved</center>
+        <center><a href="http://www.beian.miit.gov.cn">湘ICP备17005816号</a></center>
+    </div>
     @} else {
     <center style="margin: 60px;"><h3>空空如也</h3></center>
     @}
@@ -20,6 +26,4 @@
 <script src="${ctxPath}/lib/jquery/jquery.min.js"></script>
 <script src="${ctxPath}/lib/layui/layui.js"></script>
 <script src="${ctxPath}/js/common/HK.js"></script>
-<script>
-</script>
 @include("/blog/_footer.html"){}
