--- a/src/main/resources/templates/sys/manage.html
+++ b/src/main/resources/templates/sys/manage.html
@@ -251,13 +251,18 @@
             </div>
             <!-- /.form-group -->
             <div class="form-group">
-                <button class="layui-btn layui-btn-primary btn-block" \@click="someTodo">其它设置</button>
-            </div>
-            <div class="form-group">
                 <button class="layui-btn layui-btn-primary btn-block" \@click="logout">退出系统</button>
             </div>
             <div class="form-group">
                 <button type="button" class="layui-btn" name="file" id="uploadImg"><i class="layui-icon">&#xe67c;</i>更新头像
+                </button>
+            </div>
+            <div class="form-group">
+                <button type="button" class="layui-btn" name="file" id="uploadResume"><i class="layui-icon">&#xe67c;</i>更新简历
+                </button>
+            </div>
+            <div class="form-group">
+                <button type="button" class="layui-btn" name="file" id="uploadAbout"><i class="layui-icon">&#xe67c;</i>更新关于
                 </button>
             </div>
             <!-- /.form-group -->
