--- a/src/main/resources/templates/sys/blog/add.html
+++ b/src/main/resources/templates/sys/blog/add.html
@@ -8,7 +8,7 @@
         </fieldset>
         <blockquote class="layui-elem-quote layui-quote-nm">
             <p>我们假设您认真阅读了帮助文档，了解细节上的一些约定，这里再次说明一下需要注意的地方：</p>
-            <p>1.对于所传的HTML文件，里面的格式必须要符合xxx.html</p>
+            <p>1.对于所传的MD文件，里面的格式必须要符合xxx.md</p>
             <p>2.上传完后，必须点击确认保存，才算完成操作</p>
         </blockquote>
         <fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
@@ -22,7 +22,7 @@
                     <tr>
                         <th>文件名</th>
                         <th>大小</th>
-                        <th>目录：标题：排序：创建时间</th>
+                        <th>目录：标题：排序：创建时间：统计字数</th>
                         <th>状态</th>
                         <th>操作</th>
                     </tr>
