--- a/src/main/resources/templates/sys/blog/week.html
+++ b/src/main/resources/templates/sys/blog/week.html
@@ -12,7 +12,7 @@
             <p>2.上传完后，必须点击确认保存，才算完成操作</p>
         </blockquote>
         <fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
-            <legend>上传博客MD文件</legend>
+            <legend>上传周报MD文件</legend>
         </fieldset>
         <div class="layui-upload">
             <button type="button" class="layui-btn layui-btn-normal" id="testList">多文件选择</button>
@@ -42,5 +42,5 @@
 <script type="text/javascript">
     HK.addCtx("${ctxPath}");
 </script>
-<script src="${ctxPath}/js/upload.js"></script>
+<script src="${ctxPath}/js/week.js"></script>
 @}
