--- a/src/main/resources/templates/blog/blog.html
+++ b/src/main/resources/templates/blog/blog.html
@@ -8,7 +8,11 @@
         </div>
         <div class="panel-body">
             @if (isNotEmpty(user.blog.characterCount)) {
-            <p style="font-size: 14px;color: #777777;">字数约 ${user.blog.characterCount} 字, 阅读耗时约 ${parseInt(user.blog.characterCount / 2250)} 分钟</p>
+                @ var minute = parseInt(user.blog.characterCount / 2250);
+                @ minute = minute < 5 ? minute + 1 : minute;
+                @ minute = minute > 10 ? minute - 3 : minute;
+                @ minute = minute > 20 ? minute - 6 : minute;
+            <p style="font-size: 14px;color: #777777;">字数约 ${user.blog.characterCount} 字, 阅读耗时约 ${minute} 分钟</p>
             @}
             @printFile("blog:" + user.blog.filePath + ".html");
             @if(isNotEmpty(user.blog.createTime) && isNotEmpty(user.blog.modifiedTime)) {
