--- a/src/main/resources/templates/blog/_header.html
+++ b/src/main/resources/templates/blog/_header.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type"/>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>${user.name!"无名氏"}</title>
     <link href="${ctxPath}/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="${ctxPath}/lib/layui/css/layui.css" rel="stylesheet"/>
