--- a/src/main/resources/templates/blog/blog.html
+++ b/src/main/resources/templates/blog/blog.html
@@ -8,10 +8,10 @@
         </div>
         <div class="panel-body">
             @if (isNotEmpty(user.blog.characterCount)) {
-                @ var minute = parseInt(user.blog.characterCount / 2250);
+                @ var minute = parseInt(user.blog.characterCount / 1850);
                 @ minute = minute < 5 ? minute + 1 : minute;
-                @ minute = minute > 10 ? minute - 3 : minute;
-                @ minute = minute > 20 ? minute - 6 : minute;
+                @ minute = minute > 10 ? minute - 2 : minute;
+                @ minute = minute > 20 ? minute - 4 : minute;
             <p style="font-size: 14px;color: #777777;">字数约 ${user.blog.characterCount} 字, 阅读耗时约 ${minute} 分钟</p>
             @}
             @printFile("blog:" + user.blog.filePath + ".html");
@@ -38,6 +38,6 @@
 <script src="${ctxPath}/lib/layui/layui.js"></script>
 <script src="${ctxPath}/js/common/HK.js"></script>
 <script src="${ctxPath}/js/blog.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 @include("/blog/_footer.html"){}
