--- a/src/main/resources/templates/sys/manage.html
+++ b/src/main/resources/templates/sys/manage.html
@@ -5,6 +5,7 @@
     <title>小葵博客</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link href="${ctxPath}/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="${ctxPath}/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="${ctxPath}/lib/adminlte/css/AdminLTE.min.css" rel="stylesheet"/>
