--- a/src/main/resources/static/css/blog.css
+++ b/src/main/resources/static/css/blog.css
@@ -194,6 +194,13 @@ ul.list-group {
     float: unset;
 }
 
+.right-nav .p2 {
+    white-space:nowrap;overflow:hidden;text-overflow:ellipsis;
+    float: unset;
+    display: inline;
+}
+
+
 .right-nav ul, ol {
     padding-left: 0;
 }
