修改部分代码

--- a/src/main/resources/templates/blog/_header.html
+++ b/src/main/resources/templates/blog/_header.html
@@ -22,7 +22,7 @@
             </a>
         </ul>
         <div class="layui-form" id="nav-search">
-            <input type="text" name="key" id="key" autocomplete="off" placeholder="快速搜索 如2019/Java"
+            <input type="text" name="key" id="key" autocomplete="off" placeholder="快速搜索 如多线程"
                    class="layui-input" style="width:60%">
             <button class="layui-btn layui-btn-primary" onclick="search()">
                 搜索
