略微调整布局

--- a/src/main/resources/templates/blog/_header.html
+++ b/src/main/resources/templates/blog/_header.html
@@ -29,7 +29,7 @@
             </button>
         </div>
         <ul class="layui-nav fly-nav" id="nav-title">
-            <li class="layui-nav-item"><a href="${ctxPath}/blog">首页</a></li>
+            <li class="layui-nav-item"><a href="${ctxPath}/">首页</a></li>
             <li class="layui-nav-item">
                 <a href="javascript:;">布局</a>
                 <dl class="layui-nav-child" id="nav-l">
