--- a/src/main/resources/templates/blog/index1.html
+++ b/src/main/resources/templates/blog/index1.html
@@ -7,14 +7,14 @@
     @for (list in lists) {
         <h3 style="clear: both;margin: 0;padding: 15px 0 5px;">${titles[listLP.index - 1]}</h3>
         @for (blog in list) {
-        <li style="width:50%;margin:10px 0;float:left;">
+        <li style="width:50%;margin:9px 0;float:left;">
             ${blog.createTime, "yyyy-MM-dd"}
             <a target="_blank" href="${ctxPath + blog.blogPath}">${blog.dir}：${blog.title}</a>
         </li>
         @}
     @}
     </ul>
-    <div style="padding-top: 30px;clear: both">
+    <div style="padding-top: 20px;clear: both">
         <center>公开博客 ${user.pub} 篇，受保护博客 ${user.pro} 篇，All Right Reserved</center>
         <center><a href="http://www.beian.miit.gov.cn">湘ICP备17005816号</a></center>
     </div>
@@ -73,4 +73,6 @@
 <script src="${ctxPath}/lib/jquery/jquery.min.js"></script>
 <script src="${ctxPath}/lib/layui/layui.js"></script>
 <script src="${ctxPath}/js/common/HK.js"></script>
+<script src="${ctxPath}/aplayer/APlayer.min.js"></script>
+<script src="${ctxPath}/aplayer/myAplayer.js"></script>
 @include("/blog/_footer.html"){}
