--- a/src/main/resources/static/css/blog.css
+++ b/src/main/resources/static/css/blog.css
@@ -12,8 +12,17 @@ body {
     background: #fff;
     border-radius: 0;
     -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .1)
+}
 
+.layui-main {
+    width: 64%;
+    /*-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .1)*/
     /*-webkit-box-shadow: 0 10px 15px rgba(0, 0, 0, .1)*/
+}
+
+.search {
+    vertical-align: middle;
+    border: 1px solid rgb(201, 201, 201);
 }
 
 .header-nav .layui-nav {
