--- a/src/main/resources/templates/blog/index1.html
+++ b/src/main/resources/templates/blog/index1.html
@@ -1,4 +1,5 @@
 @include("/blog/_header.html"){}
+
 <div class="layui-main" style="padding: 15px 60px;margin-top: 26px;margin-left: 23%;width:62%;">
     <center>本页共 ${user.pageTotal} 篇，分为 ${user.dirCount} 个系列展示</center>
 
@@ -7,7 +8,7 @@
     @for (list in lists) {
         <h3 style="clear: both;margin: 0;padding: 15px 0 5px;">${titles[listLP.index - 1]}</h3>
         @for (blog in list) {
-        <li style="width:50%;margin:9px 0;float:left;">
+        <li style="width:50%;margin:9px 0;float:left;padding-right:5px;">
             ${blog.createTime, "yyyy-MM-dd"}
             <a target="_blank" href="${ctxPath + blog.blogPath}">${blog.dir}：${blog.title}</a>
         </li>
