--- a/src/main/resources/templates/blog/_header.html
+++ b/src/main/resources/templates/blog/_header.html
@@ -9,7 +9,7 @@
     <link href="${ctxPath}/css/blog.css" rel="stylesheet"/>
     <link href="${ctxPath}/css/typora.css" rel="stylesheet"/>
     <link href="${ctxPath}/aplayer/APlayer.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/styles/rainbow.min.css">
+    <link href="${ctxPath}/css/rainbow.css" rel="stylesheet"/>
 </head>
 <body>
 <div class="header-nav">
