--- a/src/main/resources/templates/blog/blog.html
+++ b/src/main/resources/templates/blog/blog.html
@@ -32,6 +32,6 @@
 <script src="${ctxPath}/lib/layui/layui.js"></script>
 <script src="${ctxPath}/js/common/HK.js"></script>
 <script src="${ctxPath}/js/blog.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"></script>
+<script src="${ctxPath}/js/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 @include("/blog/_footer.html"){}
