--- a/src/main/resources/templates/blog/index1.html
+++ b/src/main/resources/templates/blog/index1.html
@@ -16,7 +16,7 @@
     @}
     </ul>
     <div style="padding-top: 20px;clear: both">
-        <center>公开博客 ${user.pub} 篇，受保护博客 ${user.pro} 篇，All Right Reserved</center>
+        <center>公开博客 ${user.pub} 篇，非公开博客 ${user.pro} 篇，Since 2017-2020，All Right Reserved</center>
         <center><a href="http://www.beian.miit.gov.cn">湘ICP备17005816号</a></center>
     </div>
     @} else {
