--- a/k-main/src/main/resources/static/css/typora.css
+++ b/k-main/src/main/resources/static/css/typora.css
@@ -1538,8 +1538,8 @@ header, .context-menu, .megamenu-content, footer {
 #content .content-body {
     overflow: hidden;
     float: left;
-    width:70%;
-    margin: 0% 25% 1% 5%;
+    width:66%;
+    margin: 0 25% 1% 5%;
 }
 
 #write {
@@ -1577,7 +1577,8 @@ header, .context-menu, .megamenu-content, footer {
 
 #right-nav {
     /*background: #F8F8F8;*/
-    width: 14%;
+    width: 18%;
+    height: 80%;
     padding-top: 1%;
     padding-bottom: 1%;
     float: right;
@@ -1587,7 +1588,37 @@ header, .context-menu, .megamenu-content, footer {
     top: 125px;
     right: 6%;
     border: solid #eeeeee 2px;
+    overflow-y: scroll;
     /*border: solid green 1px;*/
+}
+
+/*—滚动条默认显示样式–*/
+#right-nav::-webkit-scrollbar-thumb{
+    background-color:#018EE8;
+    height:50px;
+    outline-offset:-2px;
+    outline:2px solid #fff;
+    -webkit-border-radius:4px;
+    border: 2px solid #fff;
+}
+
+/*—鼠标点击滚动条显示样式–*/
+#right-nav::-webkit-scrollbar-thumb:hover{
+    background-color:#FB4446;
+    height:50px;
+    -webkit-border-radius:4px;
+}
+
+/*—滚动条大小–*/
+#right-nav::-webkit-scrollbar{
+    width:10px;
+    height:18px;
+}
+
+/*—滚动框背景样式–*/
+#right-nav::-webkit-scrollbar-track-piece{
+    background-color:#fff;
+    -webkit-border-radius:0;
 }
 
 #right-nav a {
