--- a/k-main/src/main/resources/static/css/typora.css
+++ b/k-main/src/main/resources/static/css/typora.css
@@ -1578,7 +1578,7 @@ header, .context-menu, .megamenu-content, footer {
 #right-nav {
     /*background: #F8F8F8;*/
     width: 18%;
-    height: 80%;
+    max-height: 80%;
     padding-top: 1%;
     padding-bottom: 1%;
     float: right;
